@@ -64,7 +64,7 @@ $messages = array(
 'tog-watchlisthideown'        => '监视列表弆到偶𠮶编辑',
 'tog-watchlisthidebots'       => '监视列表弆到机器人𠮶编辑',
 'tog-watchlisthideminor'      => '监视列表弆到细修改',
-'tog-nolangconversion'        => '嫑字转换',
+'tog-variantconversion'       => '要字转换',
 'tog-ccmeonemails'            => '偶发email到人家时也发封副本到偶',
 'tog-diffonly'                => '比较两只版本差异𠮶时间伓显示文章𠮶内容',
 'tog-showhiddencats'          => '显示弆到𠮶分类',
