@@ -89,7 +89,7 @@ $messages = array(
 'tog-watchlisthideown'        => '監視列表弆到偶嗰編輯',
 'tog-watchlisthidebots'       => '監視列表弆到機器人嗰編輯',
 'tog-watchlisthideminor'      => '監視列表弆到細修改',
-'tog-nolangconversion'        => '嫑字轉換',
+'tog-variantconversion'       => '要字轉換',
 'tog-ccmeonemails'            => '偶發email到人家時也發封副本到偶',
 'tog-diffonly'                => '比較兩隻版本差異嗰時間伓顯示文章嗰內容',
 'tog-showhiddencats'          => '顯示弆到嗰分類',
