@@ -31,10 +31,6 @@ $separatorTransformTable = array(
 	'.' => ',',
 );
 
-$extraUserToggles = array(
-	'nolangconversion'
-);
-
 $fallback8bitEncoding = 'windows-1254';
 
 $namespaceNames = array(
